# pulumi-nginx-deploy

./: Pulumi.yaml  README.md  pyproject.toml
.github/workflows/: pulumi-deploy.yml
app/: __main__.py
