[tool.poetry]
name = "pulumi-nginx-deploy"
version = "0.1.0"
description = "A simple Nginx deployment using Pulumi and Kubernetes"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pulumi = ">=3.0.0,<4.0.0"
pulumi-kubernetes = ">=4.0.0,<5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
